# archievator

./: CMakeLists.txt
data/: data1.txt  data2.txt  data5.txt
data_out/: data_out.txt
decompressed_check/: decompressed_out.txt
professional_compression/: data1.txt  data2.txt  data3.txt  data4.txt  data5.txt
src/: LZ77.h  LZW.h  RLE.h  archievatorLZ77.cpp  archievatorLZW.cpp  archievatorRLE.cpp  get_array_from_image.py  get_image_from_array.py  main.cpp  test_func.cpp
src/env/: pyvenv.cfg
src/env/Scripts/: activate  activate.bat
